--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/slate.css">
 </head>
 
-<body>
+<body style='background: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);;'>
 
 <div class="nav-panel">
     <nav>
