--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
             <li class="tag"><a data-tooltip="favorites" href="#favorite"><i class="icon fa fa-star" aria-hidden="true"></i></a></li>
             <li class="tag"><a data-tooltip="search" href="#search"><i class="icon fa fa-search" aria-hidden="true"></i></a></li>
             <li class="tag"><a data-tooltip="shopping" href="#shopping"><i class="icon fa fa-shopping-basket" aria-hidden="true"></i></a></li>
-            <li class="tag"><a data-tooltip="music" href="#music"><i class="icon fa fa-headphones" aria-hidden="true"></i></a></li>
+            <li class="tag"><a data-tooltip="app" href="#app"><i class="icon fa fa-google-play" aria-hidden="true"></i></a></li>
             <li class="tag"><a data-tooltip="video" href="#video"><i class="icon fa fa-video-camera" aria-hidden="true"></i></a></li>
+            <li class="tag"><a data-tooltip="game" href="#game"><i class="icon fa fa-gamepad" aria-hidden="true"></i></a></li>
+            <li class="tag"><a data-tooltip="technology" href="#tech"><i class="icon fa fa-rocket" aria-hidden="true"></i></a></li>
 
         </ul>
     </nav>
@@ -60,7 +62,7 @@
     <div class="tile-title">reddit</div>
 </a>
 
-<a class="tile tile-link" href="https://web.spotify.com" data-groups='favorite,music' target="_blank">
+<a class="tile tile-link" href="https://web.spotify.com" data-groups='favorite,video' target="_blank">
     <div class="tile-box"
         data-title='spotify'
         data-url='https://web.spotify.com'
@@ -69,7 +71,7 @@
     <div class="tile-title">spotify</div>
 </a>
 
-<a class="tile tile-link" href="https://play.google.com/music/listen" data-groups='music' target="_blank">
+<a class="tile tile-link" href="https://play.google.com/music/listen" data-groups='video' target="_blank">
     <div class="tile-box"
         data-title='google music'
         data-url='https://play.google.com/music/listen'
@@ -78,7 +80,7 @@
     <div class="tile-title">google music</div>
 </a>
 
-<a class="tile tile-link" href="https://pandora.com" data-groups='music' target="_blank">
+<a class="tile tile-link" href="https://pandora.com" data-groups='video' target="_blank">
     <div class="tile-box"
         data-title='pandora'
         data-url='https://pandora.com'
@@ -87,7 +89,7 @@
     <div class="tile-title">pandora</div>
 </a>
 
-<a class="tile tile-link" href="https://soundcloud.com" data-groups='music' target="_blank">
+<a class="tile tile-link" href="https://soundcloud.com" data-groups='video' target="_blank">
     <div class="tile-box"
         data-title='soundcloud'
         data-url='https://soundcloud.com'
@@ -123,7 +125,7 @@
     <div class="tile-title">twitter</div>
 </a>
 
-<a class="tile tile-link" href="https://twitch.com" data-groups='video' target="_blank">
+<a class="tile tile-link" href="https://twitch.com" data-groups='game' target="_blank">
     <div class="tile-box"
         data-title='twitch'
         data-url='https://twitch.com'
@@ -150,13 +152,49 @@
     <div class="tile-title">netflix</div>
 </a>
 
-<a class="tile tile-link" href="https://imgur.com" data-groups='' target="_blank">
+<a class="tile tile-link" href="https://imgur.com" data-groups='video' target="_blank">
     <div class="tile-box"
         data-title='imgur'
         data-url='https://imgur.com'
         data-bg-color='#ffffff'data-txt-color='#85bf25'data-img='logos/imgur.svg'style='background-color:#ffffff; color:#85bf25'>
         <img class="logo" src="logos/imgur.svg"></img></div>
     <div class="tile-title">imgur</div>
+</a>
+
+<a class="tile tile-link" href="https://www.sxl.cn/" data-groups='app' target="_blank">
+    <div class="tile-box"
+        data-title='SXL'
+        data-url='https://www.sxl.cn/'
+        data-bg-color='#f1f1f1'data-txt-color='#6441a5'style='background-color:#f1f1f1; color:#6441a5'>
+        SXL</div>
+    <div class="tile-title">SXL</div>
+</a>
+
+<a class="tile tile-link" href="https://msdn.itellyou.cn/" data-groups='app' target="_blank">
+    <div class="tile-box"
+        data-title='MSDN'
+        data-url='https://msdn.itellyou.cn/'
+        data-bg-color='#f1f1f1'data-txt-color='#00b7ee'style='background-color:#f1f1f1; color:#00b7ee'>
+        MSDN</div>
+    <div class="tile-title">MSDN</div>
+</a>
+
+<a class="tile tile-link" href="https://msdn.itellyou.cn/" data-groups='tech' target="_blank">
+    <div class="tile-box"
+        data-title='MSDN'
+        data-url='https://msdn.itellyou.cn/'
+        data-bg-color='#f1f1f1'data-txt-color='#00b7ee'style='background-color:#f1f1f1; color:#00b7ee'>
+        MSDN</div>
+    <div class="tile-title">MSDN</div>
+</a>
+
+<a class="tile tile-link" href="https://www.skidrowcodex.net" data-groups='game' target="_blank">
+    <div class="tile-box"
+        data-title='SKIDOWCODEX'
+        data-url='https://www.skidrowcodex.net'
+        data-bg-color='#f1f1f1'data-txt-color='#03004c'style='background-color:#f1f1f1; color:#03004c'>
+        SKIDOWCODEX</div>
+    <div class="tile-title">SKIDOWCODEX</div>
 </a>
 
 </div>
