--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li class="tag"><a data-tooltip="video" href="#video"><i class="icon fa fa-video-camera" aria-hidden="true"></i></a></li>
             <li class="tag"><a data-tooltip="game" href="#game"><i class="icon fa fa-gamepad" aria-hidden="true"></i></a></li>
             <li class="tag"><a data-tooltip="technology" href="#tech"><i class="icon fa fa-rocket" aria-hidden="true"></i></a></li>
+            <li class="tag"><a data-tooltip="bigdata" href="#data"><i class="icon fa fa-cloud" aria-hidden="true"></i></a></li>
 
         </ul>
     </nav>
@@ -170,15 +171,6 @@
     <div class="tile-title">SXL</div>
 </a>
 
-<a class="tile tile-link" href="https://msdn.itellyou.cn/" data-groups='app' target="_blank">
-    <div class="tile-box"
-        data-title='MSDN'
-        data-url='https://msdn.itellyou.cn/'
-        data-bg-color='#f1f1f1'data-txt-color='#00b7ee'style='background-color:#f1f1f1; color:#00b7ee'>
-        MSDN</div>
-    <div class="tile-title">MSDN</div>
-</a>
-
 <a class="tile tile-link" href="https://msdn.itellyou.cn/" data-groups='tech' target="_blank">
     <div class="tile-box"
         data-title='MSDN'
@@ -188,6 +180,15 @@
     <div class="tile-title">MSDN</div>
 </a>
 
+<a class="tile tile-link" href="http://index.baidu.com/" data-groups='data' target="_blank">
+    <div class="tile-box"
+        data-title='Baidu INDEX'
+        data-url='http://index.baidu.com/'
+        data-bg-color='#f1f1f1'data-txt-color='#e60012'style='background-color:#f1f1f1; color:#e60012'>
+        Baidu INDEX</div>
+    <div class="tile-title">Baidu INDEX</div>
+</a>
+
 <a class="tile tile-link" href="https://www.skidrowcodex.net" data-groups='game' target="_blank">
     <div class="tile-box"
         data-title='SKIDOWCODEX'
@@ -195,6 +196,33 @@
         data-bg-color='#f1f1f1'data-txt-color='#03004c'style='background-color:#f1f1f1; color:#03004c'>
         SKIDOWCODEX</div>
     <div class="tile-title">SKIDOWCODEX</div>
+</a>
+
+<a class="tile tile-link" href="https://trends.google.com/trends/explore" data-groups='data' target="_blank">
+    <div class="tile-box"
+        data-title='Google Trend'
+        data-url='https://trends.google.com/trends/explore'
+        data-bg-color='#f1f1f1'data-txt-color='#13b5b1'style='background-color:#f1f1f1; color:#13b5b1'>
+        Google Trend</div>
+    <div class="tile-title">Google Trend</div>
+</a>
+
+<a class="tile tile-link" href="https://index.toutiao.com/" data-groups='data' target="_blank">
+    <div class="tile-box"
+        data-title='Toutiao INDEX'
+        data-url='https://index.toutiao.com/'
+        data-bg-color='#f1f1f1'data-txt-color='#ff0000'style='background-color:#f1f1f1; color:#ff0000'>
+        Toutiao INDEX</div>
+    <div class="tile-title">Toutiao INDEX</div>
+</a>
+
+<a class="tile tile-link" href="http://data.weibo.com/index" data-groups='data' target="_blank">
+    <div class="tile-box"
+        data-title='Weibo INDEX'
+        data-url='http://data.weibo.com/index'
+        data-bg-color='#f1f1f1'data-txt-color='#ff0000'style='background-color:#f1f1f1; color:#ff0000'>
+        Weibo INDEX</div>
+    <div class="tile-title">Weibo INDEX</div>
 </a>
 
 </div>
