--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li class="tag"><a data-tooltip="favorites" href="#favorite"><i class="icon fa fa-star" aria-hidden="true"></i></a></li>
             <li class="tag"><a data-tooltip="search" href="#search"><i class="icon fa fa-search" aria-hidden="true"></i></a></li>
             <li class="tag"><a data-tooltip="shopping" href="#shopping"><i class="icon fa fa-shopping-basket" aria-hidden="true"></i></a></li>
-            <li class="tag"><a data-tooltip="app" href="#app"><i class="icon fa fa-google-play" aria-hidden="true"></i></a></li>
+            <li class="tag"><a data-tooltip="download" href="#down"><i class="icon fa fa-download" aria-hidden="true"></i></a></li>
             <li class="tag"><a data-tooltip="video" href="#video"><i class="icon fa fa-video-camera" aria-hidden="true"></i></a></li>
             <li class="tag"><a data-tooltip="game" href="#game"><i class="icon fa fa-gamepad" aria-hidden="true"></i></a></li>
             <li class="tag"><a data-tooltip="technology" href="#tech"><i class="icon fa fa-rocket" aria-hidden="true"></i></a></li>
@@ -162,7 +162,7 @@
     <div class="tile-title">imgur</div>
 </a>
 
-<a class="tile tile-link" href="https://www.sxl.cn/" data-groups='app' target="_blank">
+<a class="tile tile-link" href="https://www.sxl.cn/" data-groups='tech' target="_blank">
     <div class="tile-box"
         data-title='SXL'
         data-url='https://www.sxl.cn/'
@@ -171,7 +171,7 @@
     <div class="tile-title">SXL</div>
 </a>
 
-<a class="tile tile-link" href="https://msdn.itellyou.cn/" data-groups='tech' target="_blank">
+<a class="tile tile-link" href="https://msdn.itellyou.cn/" data-groups='down' target="_blank">
     <div class="tile-box"
         data-title='MSDN'
         data-url='https://msdn.itellyou.cn/'
